:bulb: comments inserted into company.html and style.css

--- a/company.html
+++ b/company.html
@@ -27,6 +27,8 @@
             <ul>
               <li><a href="business.html">事業内容</a></li>
               <li class="point"><a href="company.html">会社概要</a></li>
+              <!-- ここのpoint classで会社概要のみ薄いピンク色に変更する -->
+              <!-- style.cssのコメントアウト箇所を参考にすること。 -->
               <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
           </nav>
